# agentic-misp-mcp

./: .dockerignore  .env.example  .env.production-write.example  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROJECT_STATE.md  README.md  SECURITY.md  docker-compose.example.yml  goal.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: approval-flow.md  configuration.md  feed-observability.md  ga-production-readiness-plan.md  improvement-plan-v0.3.0.md  live-beta-validation-v0.2.0-beta.1.md  live-beta-validation-v0.2.0-beta.2.md  live-beta-validation-v0.2.0-rc.1.md  live-validation-plan.md  live-validation-report-v0.2.0-beta.1.md  live-validation-report-v0.2.0-beta.2.md  live-validation-report-v0.2.0-rc.1.md  live-validation-report-v0.2.1.md  live-validation-report-v0.3.0.md  misp-compatibility.md  openapi-inventory.md  production-readiness.md  production-write.md  review-v0.3.0-findings.md  roles.md  rollback.md  security.md  testing.md
docs/handoff/: phase-2-claude-code.md
scripts/: agentic-misp-mcp-config-check  agentic-misp-mcp-stdio
src/agentic_misp_mcp/: __init__.py  audit.py  cli.py  (+6 more)
tests/: conftest.py  test_approval_store.py  test_approvals_prune.py  test_audit.py  test_cli.py  test_config_doctor.py  test_controlled_write_tools.py  test_guardrails.py  test_intel_freshness.py  test_misp_client.py  test_misp_models.py  test_operation_hash.py  test_operational_gap_closure.py  test_policy.py  test_proposal_validation.py  test_scoring_age_weighting.py  test_settings.py  test_tools_contract.py
(+68 files in other folders)
